src/snapshots/learn_chumsky__test__recover_block-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing }}
---

Some(
    (
        Block(
            [
                Error,
            ],
        ),
        0..11,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            Expression,
        ),
        span: 10..11,
        reason: Unexpected,
        found: CloseBrace,
        expected: [
            Semi,
            BangEq,
            EqEq,
            Minus,
            Plus,
            Slash,
            Star,
            OpenParen,
        ],
    },
]
---
