src/snapshots/learn_chumsky__test__recover_block-7.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing ]
---

None

--- Errors ---
[
    Report {
        label: Some(
            "expression",
        ),
        span: 10..11,
        reason: Unexpected,
        expected: [
            Some(
                Semi,
            ),
            Some(
                Plus,
            ),
            Some(
                Minus,
            ),
            Some(
                Star,
            ),
            Some(
                Slash,
            ),
            Some(
                BangEq,
            ),
            Some(
                EqEq,
            ),
            Some(
                OpenParen,
            ),
        ],
        found: Some(
            CloseBracket,
        ),
    },
]
---
