src/snapshots/learn_chumsky__test__recover_block-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing )
---

None

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 10..11,
        reason: Unexpected,
        found: CloseParen,
        expected: [
            Semi,
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            OpenParen,
        ],
    },
]
---
