src/snapshots/learn_chumsky__test__recover_block.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing }
---

Some(
    (
        Block(
            [
                Error,
            ],
        ),
        0..11,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 10..11,
        reason: Unexpected,
        found: CloseBrace,
        expected: [
            Semi,
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            OpenParen,
        ],
    },
]
---
