src/snapshots/learn_chumsky__test__recover_call-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(,)()()
---

Some(
    (
        Call(
            (
                Call(
                    (
                        Call(
                            (
                                Ident("testing"),
                                0..7,
                            ),
                            [
                                (
                                    Error,
                                    7..10,
                                ),
                            ],
                        ),
                        0..10,
                    ),
                    [],
                ),
                0..12,
            ),
            [],
        ),
        0..14,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            "identifier",
        ),
        span: 8..9,
        reason: Unexpected,
        expected: [
            Some(
                Dot,
            ),
            Some(
                Minus,
            ),
            Some(
                Bang,
            ),
            Some(
                If,
            ),
            Some(
                OpenParen,
            ),
            Some(
                OpenBrace,
            ),
            Some(
                CloseParen,
            ),
        ],
        found: Some(
            Comma,
        ),
    },
]
---
