src/snapshots/learn_chumsky__test__recover_call-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(1 2 3)
---

Some(
    (
        Call(
            (
                Ident("testing"),
                0..7,
            ),
            [
                (
                    Error,
                    7..14,
                ),
            ],
        ),
        0..14,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            Expression,
        ),
        span: 10..11,
        reason: Unexpected,
        found: Int(
            2,
        ),
        expected: [
            CloseParen,
            Comma,
            Comma,
            BangEq,
            EqEq,
            Minus,
            Plus,
            Slash,
            Star,
            OpenParen,
        ],
    },
]
---
