src/snapshots/learn_chumsky__test__recover_call-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(1 + / 2)
---

Some(
    (
        Call(
            (
                Ident("testing"),
                0..7,
            ),
            [
                (
                    Error,
                    7..16,
                ),
            ],
        ),
        0..16,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 12..13,
        reason: Unexpected,
        found: Slash,
        expected: [
            Minus,
            Bang,
            OpenParen,
        ],
    },
]
---
