src/snapshots/learn_chumsky__test__recover_call-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(1, {2, 3)
---

Some(
    (
        Call(
            (
                Ident("testing"),
                0..7,
            ),
            [
                (
                    Error,
                    7..17,
                ),
            ],
        ),
        0..17,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            "expression",
        ),
        span: 13..14,
        reason: Unexpected,
        expected: [
            Some(
                Semi,
            ),
            Some(
                Plus,
            ),
            Some(
                Minus,
            ),
            Some(
                Star,
            ),
            Some(
                Slash,
            ),
            Some(
                BangEq,
            ),
            Some(
                EqEq,
            ),
            Some(
                OpenParen,
            ),
        ],
        found: Some(
            Comma,
        ),
    },
]
---
