src/snapshots/learn_chumsky__test__recover_group-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
(1 +)
---

Some(
    (
        Error,
        0..5,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            Expression,
        ),
        span: 4..5,
        reason: Unexpected,
        found: CloseParen,
        expected: [
            OpenParen,
            Minus,
            Bang,
        ],
    },
]
---
