src/snapshots/learn_chumsky__test__recover_group-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
( / 888)
---

Some(
    (
        Error,
        0..8,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            Expression,
        ),
        span: 2..3,
        reason: Unexpected,
        found: Slash,
        expected: [
            If,
            OpenBrace,
            OpenParen,
            Minus,
            Bang,
            Dot,
        ],
    },
]
---
