src/snapshots/learn_chumsky__test__recover_group-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
((testing)
---

None

--- Errors ---
[
    Report {
        label: Some(
            "expression",
        ),
        span: 0..0,
        reason: Unexpected,
        expected: [
            Some(
                Plus,
            ),
            Some(
                Minus,
            ),
            Some(
                Star,
            ),
            Some(
                Slash,
            ),
            Some(
                BangEq,
            ),
            Some(
                EqEq,
            ),
            Some(
                OpenParen,
            ),
            Some(
                CloseParen,
            ),
        ],
        found: None,
    },
]
---
